--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "a957aea8-bb9e-4ebf-b6d0-c08910923579"
   },
   "newProjectRoot": "projects",
   "projects": {
